css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
:root {
  --clr-primary-600: hsl(257, 40%, 49%);
  --clr-primary-500: hsl(300, 69%, 71%);
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: url("../images/bg-desktop.svg");
  background-color: var(--clr-primary-600);
  color: #fff;
  background-repeat: no-repeat;
  min-height: 100vh;
  background-size: cover;
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  display: flex;
}

.container {
  display: flex;
  flex-direction: column;
  margin: 50px;
  min-height: 100%;
}

.main-area {
  display: flex;
  align-items: center;
  gap: 2rem;
  margin: 50px auto;
  flex: 1;
  img {
    width: 100%;
    min-width: 460px;
  }
}

.main-content {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  h1 {
    font-weight: 600;
    line-height: 2.8rem;
  }
  p {
    font-family: "Open Sans", sans-serif;
  }

  button {
    margin: 10px auto 10px 0px;
    padding: 15px 50px;
    background-color: #fff;
    border: none;
    color: var(--clr-primary-600);
    border-radius: 25px;
    font-size: 1.2rem;
    cursor: pointer;
  }
  button:hover {
    background-color: var(--clr-primary-500);
    color: white;
  }
}

.socials {
  display: flex;
  justify-content: flex-end;
  gap: 2rem;
  padding: 0px 50px;
}
.socials li {
  border: 2px solid white;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  border-radius: 50%;
}
.socials a {
  color: white;
  border-radius: 50%;
}

.socials li:hover {
  a {
    color: var(--clr-primary-500);
  }
  border-color: var(--clr-primary-500);
  cursor: pointer;
}

@media only screen and (max-width: 800px) {
  header {
    img {
      width: 40%;
    }
  }
  body {
    font-size: 1rem;
  }
  .main-area {
    flex-direction: column;

    img {
      max-width: 400px;
      min-width: auto;
    }
  }
  .main-content {
    align-items: flex-end;

    text-align: center;
    padding: 0px 30px;
    button {
      margin: 10px auto;
    }
  }
  .socials {
    display: flex;
    justify-content: center;
    gap: 2rem;
    padding: 0px 50px;
  }
}

